feat: Implementacao da notificacao via Socket

--- a/app/serverless.yml
+++ b/app/serverless.yml
@@ -10,6 +10,8 @@ functions:
     handler: index.handler
     events:
       - httpApi: '*'
+      - websocket:
+          route: $connect
 
 plugins:
   - serverless-offline 
