--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "dependencies": {
     "express": "^4.18.2",
-    "serverless-http": "^3.1.1"
+    "node-fetch": "^2.7.0",
+    "serverless-http": "^3.1.1",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
-    "serverless-offline": "^12.0.4"
+    "serverless-offline": "^12.0.4",
+    "wscat": "^5.2.0"
   }
 }
