--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,9 @@
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
     "serverless-http": "^3.1.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "serverless-offline": "^12.0.4",
